Use Deque interface instead of List for linked lists of data in map for StatisticsLog